aws/projects/002-roman-numerals-converter/projeson/mehmet-cf-ec2-mehmets project ekstrason.yml
AWSTemplateFormatVersion: 2010-09-09

Description: This template creates an EC2 instance which enables SSH connection. 

Parameters:
  KeyPairNew:
    Description: This is my key.
    Type: AWS::EC2::KeyPair::KeyName
    Default: the_doctor

Resources:
  MehmetCFInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0c94855ba95c71c99
      InstanceType: t2.micro
      KeyName: !Ref KeyPairNew
      SecurityGroups:
        - !Ref ServerSecurityGroup
        
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: 
        Fn::Base64: !Sub |
           #!/bin/bash -xe
           yum update -y
           yum install -y httpd.x86_64
           systemctl start httpd.service
           systemctl enable httpd.service
           usermod -a -G apache ec2-user
           chown -R ec2-user:apache /var/www
           chmod -R 777 /var/www/html
           cd /var/www/html/
           wget https://raw.githubusercontent.com/mehmetafsar510/aws_devops/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/index.html
           wget https://github.com/nicholaswyn20/aws-myCV-Repo/raw/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat0.jpg
           wget https://github.com/nicholaswyn20/aws-myCV-Repo/raw/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat1.jpg
           wget https://github.com/mehmetafsar510/aws_devops/raw/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat2.jpg
           systemctl restart httpd
      
  ServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http and ssh to client host #required
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: KittensSecGroup


Outputs:
  WebsiteURL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt MehmetCFInstance.PublicDnsName
    Description: Kitten Carousel Application URL
